--- a/src/main/resources/templates/UpdateWord.html
+++ b/src/main/resources/templates/UpdateWord.html
@@ -23,6 +23,13 @@
 					class="form-control" placeholder="English" aria-label="Username"
 					aria-describedby="addon-wrapping">
 			</div>
+			
+			<div class="input-group flex-nowrap pb-3">
+				<span class="input-group-text" id="addon-wrapping"><i
+					class="fa-solid fa-user"></i></span> <input type="text"th:field="*{dialogue}"
+					class="form-control" placeholder="Dialogue" aria-label="Username"
+					aria-describedby="addon-wrapping">
+			</div>
 
 			<div class="input-group flex-nowrap pb-3">
 				<span class="input-group-text" id="addon-wrapping"><i
